force-app/main/default/objects/Case/fields/AI_Draft_Body__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Body__c</fullName>
    <description>The reviewable draft reply produced by SupportDraftingService (via SupportDraftOrchestrator). Populated only when AI_Draft_Status__c = DRAFTED. Never auto-sent; a human reviews/edits before sending. Any required disclaimer is already appended verbatim.</description>
    <label>AI Draft Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>