force-app/main/default/objects/Case/fields/AI_Draft_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Confidence__c</fullName>
    <description>Confidence of the drafted reply, clamped so it can never exceed the retrieval confidence (DECISIONS D12). HIGH requires a strict Tier-1 retrieval match. Helps the reviewer triage which drafts to trust.</description>
    <label>AI Draft Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>