force-app/main/default/objects/Case/fields/AI_Draft_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Model__c</fullName>
    <description>The Models API model that produced this draft (audit trail, checklist section 7), e.g. sfdc_ai__DefaultGPT4Omni. Lets a model-version change be correlated with draft quality.</description>
    <label>AI Draft Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>