force-app/main/default/objects/Case/fields/AI_Draft_Notes__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Notes__c</fullName>
    <description>Agent-facing notes accompanying the draft: sources used, assumptions/gaps, escalation hints, the confidence tag, and any error reason. Surfaced next to the draft so the reviewer can verify before sending.</description>
    <label>AI Draft Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>