force-app/main/default/objects/Case/fields/AI_Draft_Source_Ids__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Source_Ids__c</fullName>
    <description>Comma-separated Support_Solution__c Ids actually fed to the model for this draft (audit trail, checklist section 7). Capped at the Draft_Max_Solutions__c setting, so this stays short.</description>
    <label>AI Draft Source Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>