force-app/main/default/objects/Case/fields/AI_Draft_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Status__c</fullName>
    <description>Routed outcome of SupportDraftOrchestrator for this Case. DRAFTED = a reviewable draft was produced; ESCALATE = top match is escalate-only, no draft. NO_DRAFT_* = no draft, route to a human (reason in AI_Draft_Notes__c): NO_DRAFT_NO_MATCH (no usable solution), NO_DRAFT_EXCLUDED (intake-excluded), NO_DRAFT_LOW_CONFIDENCE (model declined or retrieval below the drafting floor), NO_DRAFT_UNGROUNDED (draft claims did not trace to cited sources - aggregate grounding or the deterministic per-claim fabrication check), NO_DRAFT_UNVERIFIED (draft passed grounding but the second-model verification gate did not confirm it answers the specific question using only supported claims; fail-closed), NO_DRAFT_MODEL_ERROR (empty/garbled/unparseable response after retries). NO_DRAFT_ERROR is legacy, retained for historical records. Stamped by the AutomatedEmailDrafting flow.</description>
    <label>AI Draft Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAFTED</fullName>
            </value>
            <value>
                <fullName>ESCALATE</fullName>
            </value>
            <value>
                <fullName>NO_DRAFT_NO_MATCH</fullName>
            </value>
            <value>
                <fullName>NO_DRAFT_EXCLUDED</fullName>
            </value>
            <value>
                <fullName>NO_DRAFT_LOW_CONFIDENCE</fullName>
            </value>
            <value>
                <fullName>NO_DRAFT_UNGROUNDED</fullName>
            </value>
            <value>
                <fullName>NO_DRAFT_UNVERIFIED</fullName>
            </value>
            <value>
                <fullName>NO_DRAFT_MODEL_ERROR</fullName>
            </value>
            <value>
                <fullName>NO_DRAFT_ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>